<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">RAMP-Android</string>
    <string name="neighbors">Neighbors</string>
    <string name="go_to_client">Go to client</string>
    <string name="go_to_service">Go to service</string>
    <string name="find_services">Find services</string>
    <string name="found_remote_services">Found remote services</string>
    <string name="get_remote_stream_list">Get remote\nstream list</string>
    <string name="get_stream">Get stream</string>
    <string name="remote_streams">Remote streams:</string>
    <string name="back_to_manager">Back to manager</string>
    <string name="chatting_with">Chatting with:</string>
    <string name="send">Send</string>
    <string name="open_chat_session">Open chat session</string>
    <string name="close_chat_session">Close chat session</string>
    <string name="back_to_chat_service">Back to chat service</string>
    <string name="picture">Picture</string>
    <string name="first_name">First name</string>
    <string name="chat_manager">RAMP: Chat Manager</string>
    <string name="last_name">Last name</string>
    <string name="birthdate">Birth date</string>
    <string name="take_picture_from">Take picture from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="ttl">TTL</string>
    <string name="timeout">Timeout</string>
    <string name="expiry">Expiry</string>
    <string name="contact_amount">Contact amount</string>
    <string name="_3">3</string>
    <string name="_5000">5000</string>
    <string name="_300">300</string>
    <string name="_0">0</string>
    <string name="find_contacts">Find contacts</string>
    <string name="chat_with_selected">Chat with selected node(s)</string>
    <string name="chat_session_opened">Chat session(s) opened</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="clear">Clear</string>
    <string name="ramp_broadcast_client">RAMP: Broadcast Client</string>
    <string name="_1">1</string>
    <string name="_2500">2500</string>
    <string name="back_to_chat">Back to chat</string>
    <string name="service_amount">Service amount</string>
    <string name="ramp_file_sharing_client">RAMP File Sharing Client</string>
    <string name="get_remote_file_list">Get remote file list</string>
    <string name="get_file">Get file</string>
    <string name="seconds">seconds</string>
    <string name="remote_files">Remote files:</string>
    <string name="get_local_file_list">Get local file list</string>
    <string name="send_file">Send file</string>
    <string name="local_files">Local files:</string>
    <string name="ramp_file_sharing_service">RAMP: File Sharing Service</string>
    <string name="activate_file_sharing_service">Activate File Sharing Service</string>
    <string name="ramp_opportunistic_networking_manager">RAMP: Opportunistic Networking Manager</string>
    <string name="remove_packet_after_send">Remove packet after send</string>
    <string name="persist_packets">Persist packets</string>
    <string name="send_packet_period">Send packet period</string>
    <string name="_720">720</string>
    <string name="_600">600</string>
    <string name="expiration_time_managed_packets">Expiration time managed packets</string>
    <string name="minutes">minutes</string>
    <string name="available_storage">Available storage</string>
    <string name="mb">MB</string>
    <string name="_100">100</string>
    <string name="number_of_one_hop_destinations">Number of one hop destinations\n(min/medium/max)</string>
    <string name="packet_size_threshold_lower_and_higher">Packet size threshold lower and higher</string>
    <string name="kb">KB</string>
    <string name="_50">50</string>
    <string name="mechanism_to_replace_packets">Mechanism to replace packets\n(if storage unavailable)</string>
    <string name="connect_to">Connect to...</string>
    <string name="username">Username:</string>
    <string name="ramp_real_ad_hoc_multi_hop_peer_to_peer">RAMP: Real Ad-hoc Multi-hop Peer-to-peer</string>
    <string name="activate_ramp">Activate RAMP</string>
    <string name="activate_continuity_manager">Activate Continuity Manager</string>
    <string name="opportunistic_networking_manager">Opportunistic Networking Manager</string>
    <string name="refresh_neighbors">Refresh neighbors</string>
    <string name="node_id">Node ID:</string>
    <string name="rampmanager">RampManager</string>
    <string name="exit">Exit</string>
    <string name="invite">Invite</string>
    <string name="password">Password:</string>
    <string name="esmn_name">ESMN Name:</string>
    <string name="esmn_manager_ip">ESMN Manager IP:</string>
    <string name="send_message">Send message</string>
    <string name="id">Node ID</string>
    <string name="ramp_active_notification">1</string>
    <string name="LCC_notification">2</string>
    <string name="port">Port</string>
    <string name="_30">30</string>
</resources>