<?xml version="1.0" encoding="UTF-8"?>
<!--
1) find remote services 
2) select service
3) get file list
4) get file
5) send file
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unife.dsg.ramp_android.service.application.OpportunisticNetworkingManagerActivity" >

    <LinearLayout
        android:id="@+id/layout"
        android:name="RAMP Opportunistic Networking Manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ramp_opportunistic_networking_manager"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_marginBottom="8dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/persistPackets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/persist_packets" />

        <CheckBox
            android:id="@+id/removePacketAfterSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_packet_after_send" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sendPacketsPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_packet_period"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <EditText
                android:id="@+id/sendPacketsPeriodValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/_600"
                android:maxLines="1" />

            <TextView
                android:id="@+id/sendPacketsPeriodUM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds"
                android:textAppearance="@android:style/TextAppearance.Small" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/expirationTimeManagedPackets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiration_time_managed_packets"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <EditText
                android:id="@+id/expirationTimeManagedPacketsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:text="@string/_720" />

            <TextView
                android:id="@+id/expirationTimeManagedPacketsUM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:textAppearance="@android:style/TextAppearance.Small" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/availableStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_storage"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <EditText
                android:id="@+id/availableStorageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:text="@string/_100" />

            <TextView
                android:id="@+id/availableStorageUM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mb"
                android:textAppearance="@android:style/TextAppearance.Small" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/numberOfOneHopDestinations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_one_hop_destinations"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <Spinner
                android:id="@+id/numberOfOneHopDestinationsSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/packetSizeThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/packet_size_threshold_lower_and_higher"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <EditText
                android:id="@+id/packetSizeThresholdLowerValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:text="@string/_50" />

            <EditText
                android:id="@+id/packetSizeThresholdHigherValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:text="@string/_100" />

            <TextView
                android:id="@+id/packetSizeThresholdUM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kb"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/replacePackets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mechanism_to_replace_packets"
                android:textAppearance="@android:style/TextAppearance.Small" />

           <Spinner
               android:id="@+id/replacePacketsSpinner"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:drawSelectorOnTop="true" />

        </TableRow>

        <Button
            android:id="@+id/backToManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:drawSelectorOnTop="true"
            android:text="@string/back_to_manager" />

    </LinearLayout>
</ScrollView>