<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/ramp_real_ad_hoc_multi_hop_peer_to_peer"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <CheckBox
            android:id="@+id/rampActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activate_ramp" />

        <CheckBox
            android:id="@+id/cmConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activate_continuity_manager" />

        <Button
            android:id="@+id/opportunisticNetworkingManagerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/opportunistic_networking_manager" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/refreshNeighbors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_neighbors" />

            <TextView
                android:id="@+id/neighborsArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/neighbors"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </TableRow>

        <TextView
            android:id="@+id/nodeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/node_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/goToClient"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/go_to_client" />

            <Spinner
                android:id="@+id/clientSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/goToService"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/go_to_service" />

            <Spinner
                android:id="@+id/serviceSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </TableRow>

        <TextView
            android:id="@+id/buildTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.Small" />

        <EditText
            android:id="@+id/ipBench"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ip"
            android:text="192.168.42.68"
            android:inputType="text" />

        <EditText
            android:id="@+id/portBench"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/port" />

        <Button
            android:id="@+id/sendMessageBench"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/send_message"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>