<?xml version="1.0" encoding="UTF-8"?>
<!--
1) find remote services 
2) select service
3) get file list
4) get file
5) send file
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unife.dsg.ramp_android.service.application.FileSharingClientActivity" >

    <LinearLayout
        android:id="@+id/layout"
        android:name="RAMP File Sharing Client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/ramp_file_sharing_client"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/ttlTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ttl"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeoutTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/timeout"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/serviceAmountTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/service_amount"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/ttl"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/_3"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/timeout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:text="@string/_2500"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/serviceAmount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/discoverServices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/find_services" />

        <Spinner
            android:id="@+id/remoteServices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true" />

        <Button
            android:id="@+id/getRemoteFileList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:text="@string/get_remote_file_list" />

        <Spinner
            android:id="@+id/remoteFilesSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/getRemoteFile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/get_file" />

            <TableLayout
                android:id="@+id/expiryRemoteTableLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/expiryRemoteFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/expiry"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/expiryValueRemoteFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="@string/_3"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/expiryUmRemoteFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/seconds"
                        android:textAppearance="@android:style/TextAppearance.Small" />

                </TableRow>
            </TableLayout>
        </TableRow>

        <TextView
            android:id="@+id/remoteFilesText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/remote_files"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/getLocalFileList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/get_local_file_list"
            android:layout_marginTop="24dp" />

        <Spinner
            android:id="@+id/localFilesSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/sendLocalFile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/send_file" />

            <TableLayout
                android:id="@+id/expiryLocalTableLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/expiryLocalFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/expiry"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/expiryValueLocalFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@string/_300"
                        android:textAlignment="center"
                        android:maxLines="1" />

                    <TextView
                        android:id="@+id/expiryUmLocalFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/seconds"
                        android:textAppearance="@android:style/TextAppearance.Small" />

                </TableRow>
            </TableLayout>
        </TableRow>

        <TextView
            android:id="@+id/localFilesText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/local_files"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textStyle="bold" />

        <Button
            android:id="@+id/backToManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:drawSelectorOnTop="true"
            android:text="@string/back_to_manager" />

    </LinearLayout>
</ScrollView>