<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/connect_to"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/username_text"
        android:text = "@string/username"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/username_text"
        android:inputType=""
        android:maxLines="1" />


    <TextView
        android:id="@+id/password_text"
        android:text = "@string/password"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password_text"
        android:inputType="textPassword"
        android:maxLines="1" />

    <TextView
        android:id="@+id/ip_ern"
        android:text = "@string/esmn_name"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password" />

    <EditText
        android:id="@+id/txt_ern"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ip_ern"
        android:inputType=""
        android:maxLines="1" />

    <TextView
        android:id="@+id/ip_text"
        android:text = "@string/esmn_manager_ip"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_ern" />

    <EditText
        android:id="@+id/txt_ip"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ip_text"
        android:inputType=""
        android:maxLines="1" />

</RelativeLayout>