<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unife.dsg.ramp_android.service.application.ChatOpenActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:scrollbars="vertical" >

        <ListView
            android:id="@+id/listOpenChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dip"
            android:paddingTop="2dip" />

        <Button
            android:id="@+id/openChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:text="@string/open_chat_session" />

        <Button
            android:id="@+id/closeChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:text="@string/close_chat_session" />

        <Button
            android:id="@+id/backToChatService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:text="@string/back_to_chat_service" />

    </LinearLayout>
</ScrollView>